# routecrab

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  deny.toml  index.yaml  release-plz.toml  routecrab-0.4.4.tgz  routecrab-0.4.5.tgz  routecrab-0.4.6.tgz  routecrab-0.4.7.tgz  routecrab-0.4.8.tgz  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  release.yml  scorecard.yml
assets/: app.css
assets/icons/: LICENSE
deploy/helm/routecrab/: Chart.yaml  README.md  artifacthub-repo.yml  values.schema.json  values.yaml
deploy/helm/routecrab/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  podmonitor.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/helm/routecrab/templates/tests/: test-connection.yaml
docs/: annotations.md  configuration.md  openapi.yaml
docs/superpowers/plans/: 2026-06-20-routecrab.md
docs/superpowers/specs/: 2026-06-20-routecrab-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_annotations.rs
src/: config.rs  health.rs  icons.rs  k8s.rs  lib.rs  main.rs  model.rs  observability.rs  store.rs
src/web/: api.rs  card.rs  mod.rs  pages.rs  sse.rs
templates/: _board.html  _card.html  index.html
tests/: fuzz_parsing.rs
tests/fixtures/: httproute.json
