[package]
name = "routecrab"
version = "0.4.8"
edition = "2021"
rust-version = "1.88"
license = "MIT"
description = "Kubernetes-native dashboard that auto-discovers Gateway API HTTPRoutes with health checks."
repository = "https://github.com/qveensi/routecrab"

[lib]
path = "src/lib.rs"

[[bin]]
name = "routecrab"
path = "src/main.rs"

# cargo-binstall: pull a prebuilt binary from the GitHub release instead of
# compiling. Release assets are raw (un-archived) glibc binaries named
# routecrab-<version>-linux-<amd64|arm64>; map the Rust target triples to them.
[package.metadata.binstall]
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/routecrab-{ version }-linux-amd64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/routecrab-{ version }-linux-arm64"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
humantime = "2"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
kube = { version = "3", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
gateway-api = "0.21.0"
axum-prometheus = "0.10"
metrics = "0.24"
askama = "0.16"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
async-stream = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
proptest = "1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
# panic = "abort" intentionally NOT set — keep unwinding so a panicking handler
# doesn't kill the whole server process.
